[package]
name = "fast-job-queue"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "A simple, async job queue with pluggable storage backends"
repository = "https://github.com/francis2tm/fast-job-queue"
keywords = ["job", "queue", "async", "worker", "background"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[features]
default = []
postgres = ["dep:diesel", "dep:diesel-async"]

[dependencies]
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
tracing = "0"
futures = "0.3"
async-trait = { workspace = true }
diesel = { version = "2", optional = true }
diesel-async = { version = "0", optional = true }
